--- a/sass/_navbar.scss
+++ b/sass/_navbar.scss
@@ -16,6 +16,10 @@ nav {
             font-size: 1.5rem;
             margin-left: 2rem;
         }
+
+        #menu {
+            display: none;
+        }
     }
 
 
