--- a/sass/_tablets-style.scss
+++ b/sass/_tablets-style.scss
@@ -4,7 +4,7 @@
              width: 100%;
              justify-content: space-between;
 
-             .menu {
+             #menu {
                  display: inline-block;
              }
          }
