--- a/sass/style.scss
+++ b/sass/style.scss
@@ -24,6 +24,7 @@ $tamanio-titulo-celular: 4rem;
 $tamanio-parrafos-celular: 2.8rem;
 
 @import "general";
+@import "animations";
 @import "navbar";
 @import "header";
 @import "about-section";
