--- a/css/style.css
+++ b/css/style.css
@@ -24,6 +24,64 @@ body {
   display: none;
 }
 
+@keyframes deArribaHaciaAbajo {
+  0% {
+    opacity: 0;
+    transform: translateY(-50px);
+  }
+  100% {
+    opacity: 1;
+    transform: translateY(0px);
+  }
+}
+@keyframes deAbajoHaciaArriba {
+  0% {
+    opacity: 0;
+    transform: translateY(50px);
+  }
+  100% {
+    opacity: 1;
+    transform: translateY(0px);
+  }
+}
+@keyframes crecer {
+  0% {
+    opacity: 0;
+    transform: scale(0);
+  }
+  100% {
+    opacity: 1;
+    transform: scale(1);
+  }
+}
+@keyframes aparecer {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+@keyframes deIzquierdaADerecha {
+  0% {
+    opacity: 0;
+    transform: translateX(-40px);
+  }
+  100% {
+    opacity: 1;
+    transform: translateX(0px);
+  }
+}
+@keyframes deDerechaAIzquierda {
+  0% {
+    opacity: 0;
+    transform: translateX(40px);
+  }
+  100% {
+    opacity: 1;
+    transform: translateX(0px);
+  }
+}
 nav {
   width: 100%;
   height: 12vh;
@@ -35,6 +93,7 @@ nav {
   background-color: black;
   position: fixed;
   z-index: 1;
+  animation: deAbajoHaciaArriba 0.5s cubic-bezier(0.19, 1, 0.22, 1);
 }
 nav #navbar-left {
   width: 30%;
@@ -43,6 +102,7 @@ nav #navbar-left {
   flex-direction: row;
   justify-content: start;
   align-items: center;
+  animation: aparecer 0.8s cubic-bezier(0.175, 0.885, 0.32, 1.275);
 }
 nav #navbar-left span {
   font-family: "Bruno Ace", cursive;
@@ -56,6 +116,7 @@ nav #navbar-left #menu {
 nav #navbar-right {
   width: 70%;
   height: 100%;
+  animation: deDerechaAIzquierda 2s cubic-bezier(0.175, 0.885, 0.32, 1.275);
 }
 nav #navbar-right ul {
   width: 100%;
@@ -71,6 +132,10 @@ nav #navbar-right ul a {
 }
 nav #navbar-right ul a li {
   list-style: none;
+  font-family: 100;
+}
+nav #navbar-right ul a li:hover {
+  font-weight: 900;
 }
 
 header {
@@ -91,7 +156,7 @@ header #header-text {
   align-items: center;
 }
 header #header-text div {
-  width: 75%;
+  width: 90%;
   height: 100%;
   display: flex;
   flex-direction: column;
@@ -104,9 +169,11 @@ header #header-text div h1 {
   font-size: 5rem;
   font-family: "Calistoga", cursive;
   text-transform: uppercase;
+  animation: deIzquierdaADerecha 1.2s ease-in-out;
 }
 header #header-text div span {
   font-size: 1.5rem;
+  animation: deArribaHaciaAbajo 1.5s ease-in;
 }
 header #header-text div a {
   text-decoration: none;
@@ -116,6 +183,13 @@ header #header-text div a {
   background-color: white;
   padding: 1.4rem 8rem;
   border-radius: 30px;
+  animation: crecer 1.7s ease-in-out;
+  transition: 0.5s all cubic-bezier(0.6, -0.28, 0.735, 0.045);
+}
+header #header-text div a:hover {
+  color: white;
+  background-color: black;
+  border: 3px solid white;
 }
 
 #about-section {
@@ -491,6 +565,10 @@ header #header-text div a {
   align-items: center;
   box-shadow: 0px 0px 13px 0px rgba(0, 0, 0, 0.368627451);
   gap: 1rem;
+  transition: 0.5 all cubic-bezier(0.23, 1, 0.32, 1);
+}
+#contact-section #container-section #contact-section-left:hover {
+  transform: scale(1.1);
 }
 #contact-section #container-section #contact-section-left span {
   font-size: 2.5rem;
@@ -523,15 +601,19 @@ header #header-text div a {
   align-items: center;
   box-shadow: 0px 0px 13px 0px rgba(0, 0, 0, 0.368627451);
   gap: 2rem;
+  transition: 0.5 all cubic-bezier(0.23, 1, 0.32, 1);
+}
+#contact-section #container-section #contact-section-right #contenedor-red-tel div:hover {
+  transform: scale(1.1);
 }
 #contact-section #container-section #contact-section-right a {
   font-size: 2rem;
   text-decoration: none;
   color: black;
-  transition: 0.5 all cubic-bezier(0.23, 1, 0.32, 1);
+  font-weight: 200;
 }
 #contact-section #container-section #contact-section-right a:hover {
-  transform: scale(1.1);
+  font-weight: 900;
 }
 #contact-section #container-section #contact-section-right #agendar {
   width: 50%;
@@ -546,6 +628,10 @@ header #header-text div a {
   flex-direction: row;
   justify-content: center;
   align-items: center;
+  transition: 0.5 all cubic-bezier(0.23, 1, 0.32, 1);
+}
+#contact-section #container-section #contact-section-right #agendar:hover {
+  transform: scale(1.1);
 }
 #contact-section #container-section #contact-section-right #wpp {
   margin-right: 2rem;
@@ -668,6 +754,9 @@ footer p {
   }
   nav #navbar-left span {
     font-size: 2rem;
+  }
+  nav #navbar-right {
+    animation: none;
   }
   nav #navbar-right ul {
     height: 70%;
@@ -874,10 +963,13 @@ footer p {
     font-size: 2.8rem;
   }
   #contact-section #container-section #contact-section-right #agendar {
-    margin-top: 2rem;
+    margin-top: 4rem;
     font-size: 2.8rem;
     padding: 0;
     width: 90%;
+  }
+  #contact-section #container-section #contact-section-right #agendar i {
+    font-size: 2em;
   }
   footer {
     height: 30vh;
