--- a/sass/_contact-section.scss
+++ b/sass/_contact-section.scss
@@ -21,6 +21,11 @@
             @include flex(column, center, center);
             box-shadow: 0px 0px 13px 0px #0000005e;
             gap: 1rem;
+            transition: 0.5 all cubic-bezier(0.23, 1, 0.320, 1);
+
+            &:hover {
+                transform: scale(1.1);
+            }
 
             span {
                 font-size: 2.5rem;
@@ -47,6 +52,11 @@
                     @include flex(row, center, center);
                     box-shadow: 0px 0px 13px 0px #0000005e;
                     gap: 2rem;
+                    transition: 0.5 all cubic-bezier(0.23, 1, 0.320, 1);
+
+                    &:hover {
+                        transform: scale(1.1);
+                    }
                 }
             }
 
@@ -54,10 +64,10 @@
                 font-size: 2rem;
                 text-decoration: none;
                 color: black;
-                transition: 0.5 all cubic-bezier(0.23, 1, 0.320, 1);
+                font-weight: 200;
 
                 &:hover {
-                    transform: scale(1.1);
+                    font-weight: 900;
                 }
             }
 
@@ -71,6 +81,11 @@
                 font-size: 2rem;
                 border-radius: 30px;
                 @include flex(row, center, center);
+                transition: 0.5 all cubic-bezier(0.23, 1, 0.320, 1);
+
+                &:hover {
+                    transform: scale(1.1);
+                }
             }
 
             #wpp {
