--- a/sass/_navbar.scss
+++ b/sass/_navbar.scss
@@ -5,16 +5,19 @@ nav {
     background-color: black;
     position: fixed;
     z-index: 1;
+    animation: deAbajoHaciaArriba .5s cubic-bezier(0.19, 1, 0.22, 1);
 
     #navbar-left {
         @include tamanio(30%, 100%);
         @include flex(row, start, center);
+        animation: aparecer .8s cubic-bezier(0.175, 0.885, 0.32, 1.275);
 
         span {
             font-family: 'Bruno Ace', cursive;
             color: white;
             font-size: 1.5rem;
             margin-left: 2rem;
+
         }
 
         #menu {
@@ -22,9 +25,9 @@ nav {
         }
     }
 
-
     #navbar-right {
         @include tamanio(70%, 100%);
+        animation: deDerechaAIzquierda 2s cubic-bezier(0.175, 0.885, 0.32, 1.275);
 
         ul {
             @include tamanio(100%, 100%);
@@ -36,6 +39,11 @@ nav {
 
                 li {
                     list-style: none;
+                    font-family: 100;
+
+                    &:hover {
+                        font-weight: 900;
+                    }
                 }
             }
         }
